<resources>
    <string name="app_name">Movie App</string>
    <string name="search_movie">Search Movie......</string>
    <string name="trending">Trending</string>
    <string name="popular">Popular</string>
    <string name="top_rate">Top Rate</string>
    <string name="now_playing">Now Playing</string>
    <string name="see_more">See More</string>
    <string name="description">Description</string>
    <string name="top_billed_cast">Top Billed Cast</string>
    <string name="media">Media</string>
    <string name="recommendation">Recommendation</string>
    <string name="director">Director</string>
    <string name="sign_in">Sign in</string>
    <string name="favorite">Favorite</string>
    <string name="watchlist">Watchlist</string>
    <string name="history">History</string>
    <string name="edit">Edit</string>
    <string name="log_out">Log out</string>
    <string name="edit_username">Enter Name</string>
    <string name="no_history">History are not available</string>
    <string name="no_Watchlist">Watchlist are not available</string>
    <string name="no_favorite">Favorite are not available</string>
    <string name="no_movie">No Result</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>