<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.ProfileFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/profileLayout"
            android:layout_width="match_parent"
            android:padding="10dp"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Button
                android:id="@+id/btSignIn"
                android:layout_width="match_parent"
                android:visibility="gone"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_bold"
                android:textSize="18sp"
                android:textColor="@color/red"
                android:text="@string/sign_in" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cvProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:visibility="visible"
                app:cardBackgroundColor="@color/violet"
                app:cardCornerRadius="40dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/ivProfileImage"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_marginTop="12dp"
                        app:cardBackgroundColor="@color/violet"
                        app:cardCornerRadius="60dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <ImageView
                            android:id="@+id/ivProfilePic"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:scaleType="centerCrop"/>

                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:id="@+id/tvProfileName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/ivProfileImage" />

                    <TextView
                        android:id="@+id/tvProfileEmail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:layout_marginBottom="12dp"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tvProfileName" />

                    <ImageView
                        android:id="@+id/ivEditProfileImage"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        app:layout_constraintBottom_toBottomOf="@+id/ivProfileImage"
                        app:layout_constraintEnd_toEndOf="@+id/ivProfileImage"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toStartOf="@+id/ivProfileImage"
                        app:srcCompat="@drawable/ic_edit_photo" />

                    <ImageView
                        android:id="@+id/ivEditProfileName"
                        android:layout_width="20dp"
                        android:layout_marginLeft="10dp"
                        android:layout_height="20dp"
                        app:layout_constraintBottom_toBottomOf="@+id/tvProfileName"
                        app:layout_constraintStart_toEndOf="@+id/tvProfileName"
                        app:layout_constraintTop_toTopOf="@+id/tvProfileName"
                        app:srcCompat="@drawable/ic_edit_image" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cvFavorite"
                android:layout_width="match_parent"
                app:cardBackgroundColor="@color/violet"
                app:cardCornerRadius="20dp"
                android:layout_marginTop="12dp"
                android:layout_height="50dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/favoriteImage"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginRight="10dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/favorite"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_favorite" />

                    <TextView
                        android:id="@+id/favorite"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/favorite"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.55"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cvHistory"
                android:layout_width="match_parent"
                app:cardBackgroundColor="@color/violet"
                app:cardCornerRadius="20dp"
                android:layout_marginTop="12dp"
                android:layout_height="50dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/HistoryImage"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginRight="10dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/history"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_history_profile" />

                    <TextView
                        android:id="@+id/history"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/history"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.55"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cvWatchList"
                android:layout_width="match_parent"
                app:cardBackgroundColor="@color/violet"
                app:cardCornerRadius="20dp"
                android:layout_marginTop="12dp"
                android:layout_height="50dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/watchlistImage"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginRight="10dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/watchlist"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_watchlist_profile" />

                    <TextView
                        android:id="@+id/watchlist"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/watchlist"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.55"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cvLogout"
                android:layout_width="match_parent"
                app:cardBackgroundColor="@color/violet"
                app:cardCornerRadius="20dp"
                android:layout_marginTop="12dp"
                android:layout_height="50dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/logoutImage"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginRight="10dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/logout"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_logout" />

                    <TextView
                        android:id="@+id/logout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/log_out"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.55"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>


        </LinearLayout>
    </ScrollView>


    <com.github.ybq.android.spinkit.SpinKitView
        android:id="@+id/profileProgress"
        android:layout_width="80dp"
        android:layout_height="80dp"
        style="@style/SpinKitView.WanderingCubes"
        android:visibility="invisible"
        app:SpinKit_Color="@color/white"
        android:layout_gravity="center"/>

</FrameLayout>